--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-countdown-component": "^2.2.0",
     "react-native-elements": "^1.1.0",
     "react-native-fast-image": "^7.0.2",
+    "react-native-firebase": "^5.5.6",
     "react-native-fontawesome": "^6.0.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-input-scroll-view": "^1.9.1",
