--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-paper": "^2.16.0",
+    "react-native-progress": "^4.0.2",
+    "react-native-push-notification": "^3.1.9",
     "react-native-share": "^1.1.3",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^7.5.2",
     "react-navigation": "^3.5.1"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.1.0",
     "jest": "24.1.0",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "0.52.0",
     "react-test-renderer": "16.6.3"
   },
