--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "npm": {
-    "assets": [
-      "./assets/fonts/"
-    ]
-  },
-  "name": "SCotech",
-  "version": "1.7.1",
+  "name": "ScoTech",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "cancelable-fetch": "^1.0.0",
-    "react": "16.6.3",
-    "react-native": "^0.58.6",
+    "react": "16.9.0",
+    "react-native": "0.61.5",
     "react-native-background-timer": "^2.1.1",
-    "react-native-ble-manager": "^6.6.8",
+    "react-native-ble-manager": "^6.7.0",
     "react-native-bluetooth-status": "^1.3.0",
     "react-native-cancelable-fetch": "^0.1.1",
     "react-native-countdown-circle": "^3.0.0",
     "react-native-countdown-component": "^2.2.0",
     "react-native-elements": "^1.1.0",
-    "react-native-fast-image": "^7.0.2",
-    "react-native-firebase": "^5.5.6",
+    "react-native-firebase": "^5.6.0",
     "react-native-fontawesome": "^6.0.1",
-    "react-native-gesture-handler": "^1.1.0",
+    "react-native-gesture-handler": "^1.5.2",
     "react-native-input-scroll-view": "^1.9.1",
     "react-native-ionicons": "^4.6.1",
     "react-native-linear-gradient": "^2.5.4",
@@ -36,23 +32,20 @@
     "react-native-push-notification": "^3.1.9",
     "react-native-share": "^1.1.3",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-webview": "^7.5.2",
+    "react-native-webview": "^7.6.0",
     "react-navigation": "^3.5.1"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "24.1.0",
-    "jest": "24.1.0",
-    "jetifier": "^1.6.5",
-    "metro-react-native-babel-preset": "0.52.0",
-    "react-test-renderer": "16.6.3"
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts"
-    ]
   }
 }
