--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/viewpager": "^3.3.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -32,6 +33,7 @@
     "react-native-progress": "^4.0.2",
     "react-native-push-notification": "^3.1.9",
     "react-native-share": "^1.1.3",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^7.6.0",
     "react-navigation": "^3.5.1"
