--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.6.0",
     "react-native-fontawesome": "^6.0.1",
+    "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-input-scroll-view": "^1.9.1",
     "react-native-ionicons": "^4.6.1",
