--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-app-intro-slider": "^3.0.0",
     "react-native-background-timer": "^2.1.1",
     "react-native-ble-manager": "^6.7.0",
     "react-native-bluetooth-status": "^1.3.0",
