--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-paper": "^2.16.0",
+    "react-native-phone-call": "^1.0.9",
     "react-native-progress": "^4.0.2",
     "react-native-push-notification": "^3.1.9",
     "react-native-share": "^1.1.3",
